--- a/src/app/shared/button-gradient/button-gradient.component.scss
+++ b/src/app/shared/button-gradient/button-gradient.component.scss
@@ -55,10 +55,13 @@
   }
 
   .icon {
-    margin-right: 7px;
     background-image: $bg;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+
+  .icon + span:not(:empty) {
+    margin-left: 7px;
   }
 
   &:hover::after, &:hover {
