--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -585,6 +585,13 @@ button {
     movie-poll-item {
       .option-card::before {
         background: rgba(#352F44, .55);
+
+        &.watched {
+          backdrop-filter: grayscale(1);
+          background: rgba(53, 47, 68, 0.55);
+          // background: linear-gradient(0deg, rgba(0,0,0,0.66), rgba(96,96,96,0)), url("data:image/svg+xml,%3Csvg viewBox='0 0 68 68' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.72' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+          background: linear-gradient(0deg, rgba(0,0,0,0.62), rgba(96,96,96,0)), url("data:image/svg+xml,%3Csvg viewBox='0 0 19 19' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.72' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        }
       }
     }
   }
